@@ -2,6 +2,11 @@ ThisBuild / version := "0.1.0-SNAPSHOT"
 
 ThisBuild / scalaVersion := "2.13.16"
 
+ThisBuild / javaOptions ++= Seq(
+  "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+  "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED"
+)
+
 lazy val root = (project in file("."))
   .settings(
     name := "scalaPRJ"
@@ -9,5 +14,6 @@ lazy val root = (project in file("."))
 
 libraryDependencies ++= Seq(
   "org.apache.spark" %% "spark-core" % "3.5.3",
-  "org.apache.spark" %% "spark-sql" % "3.5.3"
+  "org.apache.spark" %% "spark-sql" % "3.5.3",
+  "com.maxmind.geoip2" % "geoip2" % "4.0.0"
 )
